--- a/app/views/hl7_messaging/_discovery_display.html.erb
+++ b/app/views/hl7_messaging/_discovery_display.html.erb
@@ -11,10 +11,18 @@
     <div style="float: right"><%= display_time(detail.start_time) %></div><br>
     <div style="float: right"><%= display_time(detail.finish_time) %></div><br>
     <%if detail.hl7_message %>
-      <div class="btn-group btn-group-xs" role="group" aria-label="Button group with nested dropdown" data-btngroup_detail_id="<%= detail.id %>" style="float: right" >
+      <div class="btn-group btn-group-xs hl7-actions" role="group" aria-label="Button group with nested dropdown" data-btngroup_detail_id="<%= detail.id %>" style="float: right" >
         <button id='btn_discovery_csv' type="button" class="btn btn-primary" onclick="discoveryCsv(this);">Export as CSV</button>
-        <button id='btn_discovery_diffs' type="button" class="btn btn-info" onclick="discoveryDiffs(this);">Discovery Diffs</button>
-        <button id='btn_discovery_hl7' type="button" class="btn btn-primary" data-hl7_message="<%= detail.hl7_message %>" onclick="discovery_hl7_message(this, {tr_id: '<%= tr_id %>', current: <%= current %>});;">View HL7</button>
+        <button id='btn_discovery_hl7' type="button" class="btn btn-info" data-hl7_message="<%= detail.hl7_message %>" onclick="discovery_hl7_message(this, {tr_id: '<%= tr_id %>', current: <%= current %>});;">View HL7</button>
+
+        <div class="btn-group btn-group-xs">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+            Discovery Diffs <span class="caret"></span></button>
+          <ul class="dropdown-menu" role="menu">
+            <li><a onclick="discoveryDiffs(this);" data-status="active_only">Active Only</a></li>
+            <li><a onclick="discoveryDiffs(this)" data-status="all">All</a></li>
+          </ul>
+        </div>
       </div>
     <% else %>
         <div aria-label="Data is not available" style="float: right; font-weight: bold">HL7 data is not available</div>
