--- a/app/views/hl7_messaging/index.html.erb
+++ b/app/views/hl7_messaging/index.html.erb
@@ -31,8 +31,8 @@
         <div id="discovery_diff_tabs">
           <ul>
             <li><a href='#tp-diffs'>Discovery Diffs</a></li>
-            <li><a href='#tp-vista_only'>VistA Only (left)</a></li>
-            <li><a href='#tp-isaac_only'>ISAAC Only (right)</a></li>
+            <li><a href='#tp-vista_only'>VistA Only</a></li>
+            <li><a href='#tp-isaac_only'>ISAAC Only</a></li>
           </ul>
           <div id="tp-diffs" class="scrollable_div">
             <div id="ag-grid_diffs" style="height: 400px;" class="ag-fresh"></div><!-- set the height of the div dynamically?!-->
