VUID_REQUESTOR role

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -52,7 +52,7 @@
               <a href="<%= terminology_db_builder_path %>" onclick="polling.checkPolling(polling.pollEnum.DB_BUILDER);" title="Database Builder">
                 Database Builder</a></li>
 
-            <% if policy(:navigation).can_deploy? %>
+            <% if policy(:navigation).can_get_vuids %>
               <li role="menuitem">
                 <a href="<%= vuid_requests_path %>" onclick="polling.checkPolling(polling.pollEnum.VUID_REQUESTS);" title="VUID Server">
                   VUID Server</a></li>
