added role navigation for vuid requestor

--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -137,6 +137,17 @@
                   </ul>
                 </td>
               </tr>
+              <tr>
+                <td width="30%">
+                  <%= role_checkbox(Roles::VUID_REQUESTOR) %>
+                </td>
+                <td width="70%">
+                  <p>The <strong>VUID Requestor</strong> role provides additional functionality to the Read Only role including:<br>
+                  <ul>
+                    <li>Allows the user to request VUIDs</li>
+                  </ul>
+                </td>
+              </tr>
               </tbody>
             </table>
         <% end %>
