added user activity model and migration

--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -11,14 +11,15 @@
 <table class="prisme-table table-striped table-hover" id="user_edit_list_table">
   <thead>
   <tr>
-    <th width="30%">User E-Mail/SSOI Login</th>
-    <th width="45%">Assigned Roles</th>
+    <th width="20%">User E-Mail/SSOI Login</th>
+    <th width="15%">Last Activity At</th>
+    <th width="40%">Assigned Roles</th>
     <th width="25%">Actions</th>
   </tr>
   </thead>
   <tbody>
   <tr valign="top">
-    <td colspan="3" align="center">Loading...Please Wait</td>
+    <td colspan="4" align="center">Loading...Please Wait</td>
   </tr>
   </tbody>
 </table>
