--- a/config/props/prisme.properties.erb
+++ b/config/props/prisme.properties.erb
@@ -14,6 +14,9 @@ uuid_props_trim=90
 #trim Hl7 events (Checksum Discovery) not touched for x days
 hl7_trim=90
 
+#trim user activity records to last x number
+user_activity_trim=10
+
 resched_clean_queue_days=1
 #hitting http://localhost:3000/utilities/warmup
 #will cause ajax to warmup apache...
