--- a/app/views/admin_user_edit/_users.html.erb
+++ b/app/views/admin_user_edit/_users.html.erb
@@ -4,6 +4,7 @@
     <% @user_list.each do |user| %>
         <tr valign="top" id="user_row_<%= user.user_row_id %>">
           <td id="user_name_td_<%= user.user_row_id %>"><%= h user.user_name %></td>
+          <td><%= last_user_activity(username: user.user_name) %></td>
           <%
             user_roles = []
             role_text = ''
