--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -149,6 +149,17 @@
                   </ul>
                 </td>
               </tr>
+              <tr>
+                <td width="30%">
+                  <%= role_checkbox(Roles::NTRT) %>
+                </td>
+                <td width="70%">
+                  <p>The <strong>NTRT</strong> role provides additional functionality to the Read Only role including:<br>
+                  <ul>
+                    <li>Allows the user to request the modeling of new concepts</li>
+                  </ul>
+                </td>
+              </tr>
               </tbody>
             </table>
         <% end %>
